@@ -27,7 +27,6 @@ import org.springframework.web.context.request.WebRequest;
 import java.text.MessageFormat;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static de.thecodelabs.pockettracker.MainController.PARAMETER_NAME_IS_USER_SPECIFIC_VIEW;
@@ -91,7 +90,7 @@ public class UserController
 
 		final List<Show> shows = showService.getAllFavoriteShowsByUser(searchText, user);
 		Stream<Show> filteredShows = filterOption.getFilter().filter(shows, user);
-		if(!showDislikedShows)
+		if(Boolean.FALSE.equals(showDislikedShows))
 		{
 			filteredShows = filteredShows.filter(show -> !user.getShowById(show.getId())
 					.map(AddedShow::getDisliked)
@@ -105,7 +104,7 @@ public class UserController
 		model.addAttribute("currentSortOption", sortOption);
 
 		model.addAttribute("currentPage", "Meine Serien");
-		model.addAttribute("userShows", user.getShows().stream().map(AddedShow::getShow).collect(Collectors.toList()));
+		model.addAttribute("userShows", user.getShows().stream().map(AddedShow::getShow).toList());
 		model.addAttribute(PARAMETER_NAME_IS_USER_SPECIFIC_VIEW, true);
 
 		return "index";
